fixed arrow alignment on home page

--- a/content-design-checklist-master/src/App.css
+++ b/content-design-checklist-master/src/App.css
@@ -1,4 +1,6 @@
-
+.downarrow{
+  text-align: center;
+}
 
 
 .Strategy{
@@ -7,6 +9,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   height:100%;
+
 }
 
 
